# PyOptics

./: README.md  cfg1.pyop  cfg2.pyop  pyproject.toml
docs/: DOCS_PL.md
pyoptics/: __init__.py  __main__.py  utils.py
pyoptics/optics2d/: __init__.py
pyoptics/renderer/: __init__.py  test.py
