[tool.poetry]
name = "pyoptics"
version = "0.2.0"
description = "a very simple Python optics library"
authors = ["Wojciech Orański <wojtekor9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
